log
Sun 27 Nov 2022 10:53:17 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:12: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   66 |     return list;
      |            ^~~~
      |            lista
sudoku.c:66:12: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:53:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   53 |     List* lista=createList();
      |           ^~~~~
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f143852
Sun 27 Nov 2022 10:53:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2d4a5c8
Sun 27 Nov 2022 10:53:30 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:24: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   68 |               pushBack(list, adjNode);
      |                        ^~~~
      |                        lista
sudoku.c:68:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
89eb7dc
Sun 27 Nov 2022 10:53:42 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
a8254b9
Sun 27 Nov 2022 10:56:14 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: unused variable ‘matriz’ [-Werror=unused-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: unused variable ‘columna’ [-Werror=unused-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b94e2a6
Sun 27 Nov 2022 10:57:22 PM UTC: 
 sudoku.c | 36 +++++++++++++++++++++++++++++-------
 1 file changed, 29 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:72:30: error: ‘submatriz’ undeclared (first use in this function); did you mean ‘matriz’?
   72 |     for (int z=0; z<10; z++) submatriz[z]= 0;
      |                              ^~~~~~~~~
      |                              matriz
sudoku.c:72:30: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:49:7: error: unused variable ‘matriz’ [-Werror=unused-variable]
   49 |   int matriz[10];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
02bec11
